logs/monasca-events-transform.log
Listing '.'...
Listing './bin'...
Compiling './bin/jsonpath.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/decorator-4.1.2.dist-info'...
Listing './lib/python3.5/site-packages/enum'...
Listing './lib/python3.5/site-packages/enum34-1.1.6.dist-info'...
Listing './lib/python3.5/site-packages/flake8'...
Listing './lib/python3.5/site-packages/flake8/tests'...
Listing './lib/python3.5/site-packages/flake8-2.2.4.egg-info'...
Listing './lib/python3.5/site-packages/hacking'...
Listing './lib/python3.5/site-packages/hacking/checks'...
Listing './lib/python3.5/site-packages/hacking/tests'...
Listing './lib/python3.5/site-packages/hacking/tests/checks'...
Listing './lib/python3.5/site-packages/hacking-0.10.3.dist-info'...
Listing './lib/python3.5/site-packages/iso8601'...
Listing './lib/python3.5/site-packages/iso8601-0.1.12.dist-info'...
Listing './lib/python3.5/site-packages/jsonpath_rw'...
Listing './lib/python3.5/site-packages/jsonpath_rw/bin'...
Listing './lib/python3.5/site-packages/jsonpath_rw-1.4.0.egg-info'...
Listing './lib/python3.5/site-packages/kafka'...
Listing './lib/python3.5/site-packages/kafka_python-0.9.2.egg-info'...
Listing './lib/python3.5/site-packages/mccabe-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/monasca_events_transform'...
Listing './lib/python3.5/site-packages/monasca_events_transform-0.0.5.dist-info'...
Listing './lib/python3.5/site-packages/monasca_statsd-1.9.0.dist-info'...
Listing './lib/python3.5/site-packages/monascastatsd'...
Listing './lib/python3.5/site-packages/notigen'...
Compiling './lib/python3.5/site-packages/notigen/__init__.py'...
***   File "./lib/python3.5/site-packages/notigen/__init__.py", line 83
    print filename
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/notigen-0.3.dev36.egg-info'...
Listing './lib/python3.5/site-packages/pbr'...
Listing './lib/python3.5/site-packages/pbr/cmd'...
Listing './lib/python3.5/site-packages/pbr/hooks'...
Listing './lib/python3.5/site-packages/pbr/tests'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/data_files'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage/package_data'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/src'...
Listing './lib/python3.5/site-packages/pbr-0.11.1.dist-info'...
Listing './lib/python3.5/site-packages/pep8-1.5.7.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/ply'...
Listing './lib/python3.5/site-packages/ply-3.10.egg-info'...
Listing './lib/python3.5/site-packages/pyflakes'...
Listing './lib/python3.5/site-packages/pyflakes/scripts'...
Listing './lib/python3.5/site-packages/pyflakes/test'...
Listing './lib/python3.5/site-packages/pyflakes-0.8.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/stackdistiller'...
Listing './lib/python3.5/site-packages/stackdistiller-0.12.egg-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
